<resources>
    <string name="app_name">Views</string>
    <string name="preencha_seus_dados">Preencha seus dados</string>
    <string name="nome">nome</string>
    <string name="sobrenome">sobrenome</string>
    <string name="email">email</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">masculino</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">limpar</string>
    <string name="nome_do_conjuge">Nome do Cônjuge</string>
    <string name="sobrenome_do_conjuge">Sobrenome do cônjuge</string>
    <string-array name="estado_civil">
        <item>Solteiro</item>
        <item>Casado</item>
        <item>Divorciado</item>
        <item>Viuvo</item>
    </string-array>
</resources>