<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Arquivo Scroll view em si é o novo root() referenciado no MainActivity-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <!--Arquivo LinearLayout em si ERA o root() referenciado no MainActivity-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/preencha_seus_dados"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textColor="@color/black"/>
        <!--gravity posiciona em relação ao componente em si-->

        <EditText
            android:id="@+id/nomeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/nome"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />
        <!--importantForAutofill="no" n permite autocomplete-->

        <EditText
            android:id="@+id/sobrenomeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/sobrenome"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <Spinner
            android:id="@+id/estadoCivilSp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/estado_civil"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <LinearLayout
            android:id="@+id/conjugeLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:visibility="gone">
            <!--visibility:gone esconde conteudo e espaço ocupado até ser necessário -->
            <!--No caso, só mostra esse Ll de conjuge se o estado civil for casado-->

            <EditText
                android:id="@+id/nomeConjugeEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/nome_do_conjuge"
                android:minHeight="48dp"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:importantForAutofill="no" />
            <!--importantForAutofill="no" n permite autocomplete-->

            <EditText
                android:id="@+id/sobrenomeConjugeEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/sobrenome_do_conjuge"
                android:minHeight="48dp"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:importantForAutofill="no" />


        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp" >


            <RadioButton
                android:id="@+id/femininoRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/feminino"
                android:layout_weight="1"
                android:checked="true"
                />

            <RadioButton
                android:id="@+id/masculinoRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:layout_weight="1"
                />

        </RadioGroup>

        <Button
            android:id="@+id/salvarBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:padding="5dp"
            android:layout_margin="5dp"
            />

        <Button
            android:id="@+id/limparBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limpar"
            android:padding="5dp"
            android:layout_margin="5dp"
            />


    </LinearLayout>


</ScrollView>


